User Activity design + fix img size on mobile

--- a/webapp/app/style/app.css
+++ b/webapp/app/style/app.css
@@ -195,8 +195,6 @@ main#content{
 #imgPanel img{
   box-shadow: rgba(0,0,0,0.1) 5px 5px 2px;
   margin-bottom: 1em;
-  max-width: 200px;
-  max-height: 200px;
 }
 /**
 * Commentaires
@@ -210,7 +208,10 @@ main#content{
 
 /** USER
 ------------------------------------------------------*/
-
+#activity_container{
+  max-height: 85vh;
+  overflow: auto;
+}
 /**
 * Message
 ------------------*/
